# iPlay

./: .gitignore  Makefile  README.md
.github/workflows/: develop.yml
android/app/: build.gradle
android/app/src/main/cpp/: Player.cpp
android/app/src/main/res/drawable/: corner_12_border.xml  gradient_overlay.xml  ic_play_circle.xml  placeholder_backdrop.xml  playlist_panel_bg.xml  search_box.xml  selected_border.xml  splash_icon.xml  unselected_border.xml
android/app/src/main/res/layout/: actor_cell.xml  carousel_item.xml  carousel_view.xml  home_page.xml  media_backdrop_item.xml  media_backdrop_list.xml  media_page.xml  player_number_value_view.xml  player_speedup_tip_view.xml  recommendation_item.xml  tag_view.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night/: strings.xml  themes.xml
android/app/src/main/res/values-television/: strings.xml
android/app/src/main/res/values-zh/: strings.xml
android/gradle/: libs.versions.toml
android/platform/: apple
harmony/: MPV_INTEGRATION_GUIDE.md  build-profile.json5  log.txt  oh-package-lock.json5  oh-package.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5  patch.json
harmony/entry/libs/arm64-v8a/: libfribidi.so.0.4.0  libharfbuzz-subset.so.0.61151.0  libmpv.so.2  libswresample.so.6  libswscale.so.9.1.100
harmony/entry/libs/arm64-v8a/include/libavutil/: ffversion.h
harmony/entry/src/api/: iPlayDataSource.ts
harmony/entry/src/api/emby/: EmbyApi.ts  EmbyModel.ts
harmony/entry/src/bean/: BeanContainer.ts  SiteAction.ts  StarAction.ts
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  README.md  napi_init.cpp
harmony/entry/src/main/cpp/mpv/: mpv_wrapper.cpp  mpv_wrapper.h
harmony/entry/src/main/cpp/types/libmpvnative/: Index.d.ts  oh-package.json5
harmony/entry/src/main/cpp/types/libplayer/: oh-package.json5
harmony/entry/src/main/ets/components/: VideoPlayer.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/mpv/: MpvApiTest.ets  MpvPlayer.ets  MpvTestPage.ets  MpvTypes.ets  index.ets
harmony/entry/src/main/ets/pages/: AlbumPage.ets  AppearanceSettingsPage.ets  HomePage.ets  LoginPage.ets  MediaPage.ets  OtherSettingsPage.ets  PlayerPage.ets  PlayerPageMpv.ets  PrivacyPolicyPage.ets  RootPage.ets  SearchPage.ets  SeasonPage.ets  SettingsPage.ets  SiteManagePage.ets  StarPage.ets  TermsOfServicePage.ets  WelcomePage.ets
harmony/entry/src/main/ets/store/: Store.ts
harmony/entry/src/main/ets/view/: AlbumMediaList.ets  FontIcon.ets  MediaInlineCellView.ets
harmony/entry/src/main/resources/base/element/: float.json  string.json
harmony/entry/src/main/resources/base/profile/: route_map.json  (+1 more)
harmony/entry/src/module/: Router.ts
(+35 files in other folders)
